[package]
name = "ea_id"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
once_cell = "1.21.3"
clap = { version = "4.5.35", features = ["derive", "env"] }
quick-xml = { version = "0.37.3", features = ["serialize"] }
dotenvy = "0.15"
prettytable = "0.10.0"
